# routes/hotels.ts
@@ -1,6 +1,7 @@
 import Router from 'koa-router';
 import { basicAuth } from '../controllers/auth';
 import { isAdmin, getHotelsFromDB, refreshHotelsData, createHotel, updateHotel, deleteHotel } from '../controllers/hotels';
+import { proxyHotelSearch, getHotelContentProxy } from '../controllers/proxy';
 
 const router = new Router({ prefix: '/api/v1/db/hotels' });
 
@@ -13,5 +14,8 @@ router.post('/', basicAuth, isAdmin, createHotel);
 router.put('/:hotelCode', basicAuth, isAdmin, updateHotel);
 
 router.delete('/:hotelCode', basicAuth, isAdmin, deleteHotel);
+
+router.post('/proxy-hotel-search', proxyHotelSearch);
+router.get('/proxy-hotel-content', getHotelContentProxy);
 
 export { router };
